--- a/src/top-bar/attribute-combo-select/attribute-combo-select.module.css
+++ b/src/top-bar/attribute-combo-select/attribute-combo-select.module.css
@@ -10,9 +10,13 @@
 
 .attributeComboSelect {
     margin-left: 8px;
-    margin-top: 4px;
+    margin-top: 8px;
+    padding-bottom: 5px;
 }
 
-.divider {
-    margin-top: 20px !important;
+.categorySelectWrapper {
+    border-top: 1px solid #e0e0e0;
+    padding: 8px;
+    background-color: #fafafa;
+    margin-top: 1rem;
 }
